Fixed Alignment
Fixed the alignment of the vision and image divs. Also made some changes to image

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 .container{
   /* position: fixed;  */
   /* position: sticky; */
+  height: 100%;
   width: 100%; 
 }
 
@@ -15,12 +16,14 @@
   padding-top: 50px;
   text-align: left;
   font-size: 30px;
-  color: inherit;
+  color: grey;
+  font-weight: normal;
+  height: 100%;
   /*   display: inline-block; */
 }
 
 .navbarMenu {
-  /*   padding-top: 10px; */
+  /* padding-top: 0px; */
   padding-bottom: 10px;
   text-align: right;
   padding-right: 30px;
@@ -37,9 +40,9 @@ a {
 
 .vl {
   border-left: 2px solid black;
-  height: 6px;
+  height: 10px;
   position: absolute;
-  right: 41px;
+  right: 61px;
 }
 
 ls {
@@ -76,14 +79,15 @@ a:hover {
 .vision
 {
   float: right;
-  position: relative;
-  right: 300px;
-  bottom: 1000px;
+  position: absolute;
+  right: 250px;
+  bottom: 100px;
   border: solid black;
   background-color: #e3dac9;
   text-align: left;
-  width: 300px;
-  height: 400px;
+  width: 400px;
+  height: 500px;
+  font-size:large;
 }
 
 p {
@@ -92,25 +96,37 @@ p {
 }
 
 .boddy{
-  position:static;
+  position:relative;
   width: 100%;
-  height: 100px;
+  /* height: 1000px; */
 }
 
-.img{
+.backgroundImg{
   /* padding-top: 150px; */
   /* position: absolute;
   top: 10px; */
   width:inherit;
-  height: 800px; 
+  height: 700px; 
   opacity: .7;
+  background-color: #e3dac9;
 }
 
 .theirImage {
-  position: relative;
-  left: 300px;
-  bottom: 600px;
-  width: 300px;
+  background-color: #00356b;
+  position: absolute;
+  left: 200px;
+  bottom: 100px;
+  width: 500px;
+  height: 500px;
+  border-radius: 50%;
+  border: solid #e3dac9;
+}
+.pictureOfThem {
+  width: 400px;
   height: 400px;
-  border-radius: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  border-radius: 50%;
 }
